templates/panopticon_template.yaml
---
# Source: panopticon/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-panopticon
  namespace: default
  labels:
    helm.sh/chart: panopticon-v2024.2.5
    app.kubernetes.io/name: panopticon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.12"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: api
    port: 443
    targetPort: 8443
  - name: telemetry
    port: 8081
    targetPort: 8081
  selector:
    app.kubernetes.io/name: panopticon
    app.kubernetes.io/instance: release-name
---
# Source: panopticon/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-panopticon
  namespace: default
  labels:
    helm.sh/chart: panopticon-v2024.2.5
    app.kubernetes.io/name: panopticon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.12"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: panopticon
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: panopticon
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/apiregistration.yaml: d227ca47240217ec490857174fca642d7d060ff57b98e9f59b5cc33418aba3c1
    spec:
      
      serviceAccountName: release-name-panopticon
      containers:
      - name: operator
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/appscode/panopticon:v0.0.12
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --authorization-always-allow-paths=/healthz
        - --authorization-always-allow-paths=/readyz
        - --authorization-always-allow-paths=/livez
        - --authorization-always-allow-paths=/metrics
        - --use-kubeapiserver-fqdn-for-aks=true
        - --enable-validating-webhook=true
        ports:
        - containerPort: 8443
        - containerPort: 8081
        resources:
          {}
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: release-name-panopticon-apiserver-cert
      securityContext:
        fsGroup: 65535
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: panopticon/templates/license.yaml
# if license file is provided, then create a secret for license
---
# Source: panopticon/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.metrics.appscode.com
  labels:
    helm.sh/chart: panopticon-v2024.2.5
    app.kubernetes.io/name: panopticon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.12"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
  - name: metricsconfigurations.validators.metrics.appscode.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.metrics.appscode.com/v1alpha1/metricsconfigurationwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - metrics.appscode.com
        apiVersions:
          - "*"
        resources:
          - metricsconfigurations
    admissionReviewVersions: ["v1beta1"]
    failurePolicy: Fail
    sideEffects: None
